Fixes scrollbar on IE

--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -6,3 +6,7 @@
 .fade.ng-hide {
   opacity:0;
 }
+
+.slide-in-out {
+  overflow: hidden;
+}
